--- a/index.html
+++ b/index.html
@@ -2,26 +2,36 @@
 layout: layout
 title: "Harsh Pandya"
 ---
-{% for post in site.posts offset: 0 limit: 50 %}
+<p class="pageTitle">RECENT ARTICLES</p>
+
+{% for post in site.posts offset: 0 limit: 10 %}
 <div class="row">
   <div class="span8">    
     <div class="row">
-      <div class="span2">
+      <!-- <div class="span2">
         <a href="{{ post.url }}" >
             <img border="0" width="250" height="150" src="/img/posts/{{ post.image }}" alt="">
         </a>
-      </div>
-      <div class="span6">
-		<h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>      
-        <p>
+      </div> -->
+      <div class="span8">        
+
+        <p class="postDate">
+          <span>
+            <!-- <i class="icon-calendar"></i>  -->{{ post.date | date: "%B %e, %Y" }}
+          </span>
+        </p>
+
+		    <h4><strong><a href="{{ post.url }}">{{ post.title }}</a></strong></h4>              
+
+        <p class="postSummary">
           {{ post.summary }}
         </p>
-		<p>
-          <i class="icon-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
-          | <i class="icon-comment"></i> <a href="http://erjjones.github.com{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>     
-		  | <i class="icon-tags"></i> Tags :{% for tag in post.tags %} <a href="/tags/{{ tag }}" rel="tooltip" title="View posts tagged with &quot;{{ tag }}&quot;"><span class="label label-info">{{ tag }}</span></a>  {% if forloop.last != true %} {% endif %} {% endfor %}		            
-        </p>
-        <p><a href="{{ post.url }}">Read more</a></p>
+<!--     		<p>
+              <i class="icon-calendar"></i> {{ post.date | date: "%B %e, %Y" }}
+              | <i class="icon-comment"></i> <a href="http://erjjones.github.com{{ post.url }}#disqus_thread" data-disqus-identifier="{{ post.url }}"></a>     
+    		  | <i class="icon-tags"></i> Tags :{% for tag in post.tags %} <a href="/tags/{{ tag }}" rel="tooltip" title="View posts tagged with &quot;{{ tag }}&quot;"><span class="label label-info">{{ tag }}</span></a>  {% if forloop.last != true %} {% endif %} {% endfor %}		            
+        </p> -->
+        <!-- <p><a href="{{ post.url }}">Read more</a></p> -->
       </div>
     </div>    
 	<hr>
